gcc/testsuite/rust/rustc/ui/expr/malformed_closure/ruby_style_closure_successful_parse_dg.rs
const x: usize =42;
fn main() {
    let p = Some(45).and_then({|x| // { dg-error ".E0277." "" { target *-*-* } }
        1 + 1;
        Some(x * 2)
    });
}

